add derived answers to allow subsumed filter options, e.g. developed vetting implies SC and BPSS

--- a/frameworks/g-cloud-9/questions/services/dataStorageAndProcessingLocations.yml
+++ b/frameworks/g-cloud-9/questions/services/dataStorageAndProcessingLocations.yml
@@ -14,8 +14,17 @@ options:
     value: uk
   - label: European Economic Area (EEA)
     value: eea
+    derived_from:
+      question: dataStorageAndProcessingLocations
+      any_of:
+        - uk
   - label: EU-US Privacy Shield agreement locations
     value: privacy_shield
+    derived_from:
+      question: dataStorageAndProcessingLocations
+      any_of:
+        - uk
+        - eea
   - label: Other locations
     value: other
     filter_ignore: true
