--- a/frameworks/g-cloud-9/questions/services/penetrationTesting.yml
+++ b/frameworks/g-cloud-9/questions/services/penetrationTesting.yml
@@ -18,10 +18,16 @@ options:
       value: at_least_every_6_months
     - label: At least once a year
       value: at_least_once_a_year
+      derived_from:
+        question: penetrationTesting
+        any_of:
+          - at_least_every_6_months
     - label: Less than once a year
       value: less_than_once_a_year
+      filter_ignore: true
     - label: Never
       value: never
+      filter_ignore: true
 
 validations:
   - name: answer_required
