--- a/frameworks/g-cloud-9/questions/services/penetrationTestingApproach.yml
+++ b/frameworks/g-cloud-9/questions/services/penetrationTestingApproach.yml
@@ -14,10 +14,20 @@ options:
     value: it_health_check_check_provider
   - label: ‘IT Health Check’ performed by a Tigerscheme qualified provider or a CREST-approved service provider
     value: it_health_check_tigerscheme_or_crest_provider
+    derived_from:
+      question: penetrationTestingApproach
+      any_of:
+        - it_health_check_check_provider
   - label: Another external penetration testing organisation
     value: other_penetration_testing_organisation
+    derived_from:
+      question: penetrationTestingApproach
+      any_of:
+        - it_health_check_check_provider
+        - it_health_check_tigerscheme_or_crest_provider
   - label: In-house
     value: in_house
+    filter_ignore: true
 
 validations:
   - name: answer_required
