Combine 'yes' and 'yes extra cost' options for onsite support question.
 - also some fixes for filter labels.

https://trello.com/c/BvnMwJZa/431-combining-web-chat-and-email-support-filter-options

--- a/frameworks/g-cloud-9/questions/services/webChatSupport.yml
+++ b/frameworks/g-cloud-9/questions/services/webChatSupport.yml
@@ -22,7 +22,7 @@ type: radios
 options:
   - label: "Yes"
     value: "yes"
-    filter_label: "Web chat"
+    filter_label: "web chat"
     derived_from:
       question: webChatSupport
       any_of:
