--- a/frameworks/g-cloud-9/questions/services/emailOrTicketingSupport.yml
+++ b/frameworks/g-cloud-9/questions/services/emailOrTicketingSupport.yml
@@ -19,7 +19,7 @@ type: radios
 options:
   - label: "Yes"
     value: "yes"
-    filter_label: "Email/online ticketing"
+    filter_label: "email/online ticketing"
     derived_from:
       question: emailOrTicketingSupport
       any_of:
