--- a/frameworks/g-cloud-9/questions/services/onsiteSupport.yml
+++ b/frameworks/g-cloud-9/questions/services/onsiteSupport.yml
@@ -11,10 +11,17 @@ type: radios
 options:
   - label: "Yes"
     value: "yes"
+    derived_from:
+      question: onsiteSupport
+      any_of:
+        - yes_extra_cost
+    filter_label: "onsite support"
   - label: Yes, at extra cost
     value: yes_extra_cost
+    filter_ignore: true
   - label: "No"
     value: "no"
+    filter_ignore: true
 
 validations:
   - name: answer_required
