ignore some more other options on filters

--- a/frameworks/g-cloud-9/questions/services/dataProtectionBetweenNetworks.yml
+++ b/frameworks/g-cloud-9/questions/services/dataProtectionBetweenNetworks.yml
@@ -29,6 +29,7 @@ options:
     filter_label: bonded fibre optic connections
   - label: Legacy SSL and TLS (under 1.2)
     value: legacy_ssl
+    filter_ignore: true
     filter_label: legacy SSL and TLS (under version 1.2)
   - label: Other
     value: other
