--- a/frameworks/g-cloud-9/questions/services/securityGovernanceStandards.yml
+++ b/frameworks/g-cloud-9/questions/services/securityGovernanceStandards.yml
@@ -19,6 +19,7 @@ options:
     value: iso_iec_27001
   - label: Other
     value: other
+    filter_ignore: true
 
 validations:
   - name: answer_required
