--- a/frameworks/g-cloud-9/questions/services/staffSecurityClearanceChecks.yml
+++ b/frameworks/g-cloud-9/questions/services/staffSecurityClearanceChecks.yml
@@ -20,6 +20,7 @@ options:
   - label: Staff screening performed but doesn’t conform with BS7858:2012
     value: "staff_screening_not_bs7858_2012"
     filter_label: other security clearance
+    filter_ignore: true
   - label: Staff screening not performed
     value: none
     filter_ignore: true
