--- a/frameworks/g-cloud-9/questions/services/userAuthenticationHosting.yml
+++ b/frameworks/g-cloud-9/questions/services/userAuthenticationHosting.yml
@@ -30,6 +30,7 @@ options:
     value: username_or_password
   - label: Other
     value: other
+    filter_ignore: true
 
 validations:
   - name: answer_required
