Added hosting filters for G9 MVP
Added hosting filters for G9 MVP

Ticket: https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/manifests/search_filters.yml
+++ b/frameworks/g-cloud-9/manifests/search_filters.yml
@@ -28,9 +28,14 @@
     - installation
     - mobile
     - APISoftware
-- name: Service usage metrics
+- 
+  name: Service usage metrics
   questions:
     - metricsSoftwareHow
+- 
+  name: Service usage metrics
+  questions:
+    - metricsHostingHow
 -
   name: Infrastructure or application metrics
   questions:
