--- a/frameworks/g-cloud-9/questions/services/securityGovernanceStandards.yml
+++ b/frameworks/g-cloud-9/questions/services/securityGovernanceStandards.yml
@@ -13,12 +13,10 @@ followup:
 
 type: checkboxes
 options:
-  - label: CSA CCM v3.0
+  - label: CSA CCM version 3.0
     value: csa_ccm
-    filter_label: CSA CCM version 3.0
   - label: ISO/IEC 27001
     value: iso_iec_27001
-    filter_label: ISO/IEC 27001
   - label: Other
     value: other
     filter_ignore: true
