Updated filter_label for G9 MVP
Updated filter_label for G9 MVP

Ticket: https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/questions/services/scalingType.yml
+++ b/frameworks/g-cloud-9/questions/services/scalingType.yml
@@ -15,7 +15,7 @@ options:
     filter_label: automatic
   - label: Scales with user intervention
     value: user_intervention
-    filter_label: manual through user intervention
+    filter_label: manual
 
 validations:
   - name: answer_required
