Updated filter label for G9 MVP
Updated filter label for G9 MVP

Replaced '/' with 'or'

Ticket: https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/questions/services/emailOrTicketingSupport.yml
+++ b/frameworks/g-cloud-9/questions/services/emailOrTicketingSupport.yml
@@ -19,7 +19,7 @@ type: radios
 options:
   - label: "Yes"
     value: "yes"
-    filter_label: "email/online ticketing"
+    filter_label: "email or online ticketing"
     derived_from:
       question: emailOrTicketingSupport
       any_of:
