Update search filter group name per slack discussion.
https://trello.com/c/3XUKd0tX/345-add-filters-to-search-results-page

--- a/frameworks/g-cloud-9/manifests/search_filters.yml
+++ b/frameworks/g-cloud-9/manifests/search_filters.yml
@@ -50,7 +50,7 @@
   questions:
     - backup
 -
-  name: Public sector networks the service is connected to
+  name: Connected public sector networks
   questions:
     - publicSectorNetworksTypes
 -
