--- a/frameworks/g-cloud-9/questions/services/supportAvailableToThirdParty.yml
+++ b/frameworks/g-cloud-9/questions/services/supportAvailableToThirdParty.yml
@@ -1,6 +1,6 @@
 name: Support available to third parties
 question: Can third parties engaged by the buyer access the support features of your service?
-filter_label: support is available to third parties
+filter_label: can be used by third parties
 
 depends:
   - "on": lot
