--- a/frameworks/g-cloud-9/questions/services/governmentSecurityClearances.yml
+++ b/frameworks/g-cloud-9/questions/services/governmentSecurityClearances.yml
@@ -1,4 +1,4 @@
-name: Government security clearances
+name: Government security clearance
 question: >
   If the role requires it, what level of security clearance are you prepared to make sure your staff have?
 question_advice: Read the <a href="https://www.gov.uk/guidance/security-vetting-and-clearance" target="_blank" rel="noopener noreferrer">government guidance on security vetting and clearance (link opens in a new tab)</a>.
