Updated filter name for G9
Updated filter name so that it works for both Hosting and Software.

Ticket: https://trello.com/c/vZP7vbGP/412-labelling-of-filters

--- a/frameworks/g-cloud-9/manifests/search_filters.yml
+++ b/frameworks/g-cloud-9/manifests/search_filters.yml
@@ -29,7 +29,7 @@
     - mobile
     - APISoftware
 - 
-  name: Service usage metrics
+  name: Metrics reporting
   questions:
     - metricsSoftwareHow
     - metricsHostingHow
