--- a/frameworks/digital-outcomes-and-specialists-2/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/manifests/declaration.yml
@@ -38,8 +38,8 @@
 
 
     In questions [[conspiracy]] to [[organisedCrime]], ‘anyone who represents, supervises or has control in your organisation
-    or a partner or parent organisation’ includes members of your group of economic 
-    operators, their proposed subcontractors, and any directors, partners, or 
+    or a partner or parent organisation’ includes members of your group of economic
+    operators, their proposed subcontractors, and any directors, partners, or
     any other person who has powers of representation, decision or control.
     Check that your organisation complies with [Regulation 57(1) of the Public
     Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/57/made).
@@ -61,7 +61,7 @@
     you provide to consider whether or not you will be able to proceed any further with this procurement.
 
 
-    In questions [[taxEvasion]] to [[misleadingInformation]], ‘a partner organisation’ includes members
+    In questions {{ content.get_question('taxEvasion').number }} to {{ content.get_question('misleadingInformation').number }}, ‘a partner organisation’ includes members
     of your group of economic operators or their proposed subcontractors.
 
 
