--- a/frameworks/digital-outcomes-and-specialists-2/manifests/declaration.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/manifests/declaration.yml
@@ -37,9 +37,9 @@
     section, it’s very unlikely that your bid will be accepted.
 
 
-    In questions [[conspiracy]] to [[organisedCrime]], ‘anyone who represents, supervises or has control in your organisation
-    or a partner or parent organisation’ includes members of your group of economic 
-    operators, their proposed subcontractors, and any directors, partners, or 
+    In questions {{ content.get_question('conspiracy').number }} to {{ content.get_question('organisedCrime').number }}, ‘anyone who represents, supervises or has control in your organisation
+    or a partner or parent organisation’ includes members of your group of economic
+    operators, their proposed subcontractors, and any directors, partners, or
     any other person who has powers of representation, decision or control.
     Check that your organisation complies with [Regulation 57(1) of the Public
     Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/57/made).
@@ -61,7 +61,7 @@
     you provide to consider whether or not you will be able to proceed any further with this procurement.
 
 
-    In questions [[taxEvasion]] to [[misleadingInformation]], ‘a partner organisation’ includes members
+    In questions {{ content.get_question('taxEvasion').number }} to {{ content.get_question('misleadingInformation').number }}, ‘a partner organisation’ includes members
     of your group of economic operators or their proposed subcontractors.
 
 
@@ -115,8 +115,8 @@
   name: Working with digital
   editable: True
   description: >
-    You must be able to truthfully answer ‘yes’ to questions [[technologyCodesOfPractice]] to [[safeguardPersonalData]] under ‘Working with digital’ for your bid to be
-    considered eligible. If you can’t answer ‘yes’, it’s very unlikely that your bid will be accepted. You can answer ‘yes’ or ‘no’ to questions [[cyberEssentials]] and [[cyberEssentialsPlus]].
+    You must be able to truthfully answer ‘yes’ to questions {{ content.get_question('technologyCodesOfPractice').number }} to {{ content.get_question('safeguardPersonalData').number }} under ‘Working with digital’ for your bid to be
+    considered eligible. If you can’t answer ‘yes’, it’s very unlikely that your bid will be accepted. You can answer ‘yes’ or ‘no’ to questions {{ content.get_question('cyberEssentials').number }} and {{ content.get_question('cyberEssentialsPlus').number }}.
   questions:
     - technologyCodesOfPractice
     - serviceStandard
