--- a/frameworks/digital-outcomes-and-specialists-2/questions/declaration/tradingStatusOther.yml
+++ b/frameworks/digital-outcomes-and-specialists-2/questions/declaration/tradingStatusOther.yml
@@ -1,6 +1,6 @@
-question: Describe your trading status if you answered ‘other’ to [[tradingStatus]].
+question: Describe your trading status if you answered ‘other’ to {{ content.get_question('tradingStatus').number }}.
 type: text
 validations:
   -
     name: answer_required
-    message: You need to answer this question because you answered ‘other’ to [[tradingStatus]].
+    message: You need to answer this question because you answered ‘other’ to {{ content.get_question('tradingStatus').number }}.
