--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/appropriateTradeRegistersNumber.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/appropriateTradeRegistersNumber.yml
@@ -1,5 +1,5 @@
-question: If you answered ‘yes’ to question [[appropriateTradeRegisters]], please provide details including your organisation’s registration number.
+question: If you answered ‘yes’ to question {{ content.get_question('appropriateTradeRegisters').number }}, please provide details including your organisation’s registration number.
 type: text
 validations:
   - name: answer_required
-    message: You need to answer this question because you answered ‘yes’ to [[appropriateTradeRegisters]].
+    message: You need to answer this question because you answered ‘yes’ to {{ content.get_question('appropriateTradeRegisters').number }}.
