--- a/frameworks/g-cloud-9/questions/declaration/licenceOrMemberRequired.yml
+++ b/frameworks/g-cloud-9/questions/declaration/licenceOrMemberRequired.yml
@@ -7,6 +7,6 @@ options:
   - label: a member of a relevant organisation
   - label: none of the above
 validations:
-  - 
+  -
     name: answer_required
-    message: You need to answer this question because you answered ‘no’ to [[establishedInTheUK]].
+    message: You need to answer this question because you answered ‘no’ to {{ content.get_question('establishedInTheUK').number }}.
