--- a/frameworks/g-cloud-9/questions/declaration/tradingStatusOther.yml
+++ b/frameworks/g-cloud-9/questions/declaration/tradingStatusOther.yml
@@ -1,7 +1,7 @@
 name: Trading status description
-question: Describe your trading status if you answered ‘other’ to [[tradingStatus]].
+question: Describe your trading status if you answered ‘other’ to {{ content.get_question('tradingStatus').number }}.
 type: text
 validations:
   -
     name: answer_required
-    message: You need to answer this question because you answered ‘other’ to [[tradingStatus]].
+    message: You need to answer this question because you answered ‘other’ to {{ content.get_question('tradingStatus').number }}.
