--- a/frameworks/g-cloud-8/questions/declaration/appropriateTradeRegisters.yml
+++ b/frameworks/g-cloud-8/questions/declaration/appropriateTradeRegisters.yml
@@ -4,4 +4,4 @@ hint: >
     Check that your organisation complies with [Schedule 5, Regulation 58(5)](http://www.legislation.gov.uk/uksi/2015/102/regulation/58/made) of the Public Contracts Regulations 2015.
 validations:
   - name: answer_required
-    message: You need to answer this question because you answered ‘no’ to [[establishedInTheUK]].
+    message: You need to answer this question because you answered ‘no’ to {{ content.get_question('establishedInTheUK').number }}.
