--- a/frameworks/g-cloud-8/questions/declaration/appropriateTradeRegistersNumber.yml
+++ b/frameworks/g-cloud-8/questions/declaration/appropriateTradeRegistersNumber.yml
@@ -1,7 +1,7 @@
-question: If you answered ‘yes’ to question [[appropriateTradeRegisters]], please provide details including your organisation’s registration number.
+question: If you answered ‘yes’ to question {{ content.get_question('appropriateTradeRegisters').number }}, please provide details including your organisation’s registration number.
 type: text
 validations:
   - name: answer_required
-    message: You need to answer this question because you answered ‘yes’ to [[appropriateTradeRegisters]].
+    message: You need to answer this question because you answered ‘yes’ to {{ content.get_question('appropriateTradeRegisters').number }}.
   - name: under_character_limit
     message: "Your answer must be no more than than 5000 characters."
