--- a/frameworks/g-cloud-8/questions/declaration/establishedInTheUK.yml
+++ b/frameworks/g-cloud-8/questions/declaration/establishedInTheUK.yml
@@ -1,3 +1,3 @@
 question: Was your business established in the UK?
 type: boolean
-hint: If you answer ‘yes’ to this question, please move on to question [[organisationSize]].
+hint: If you answer ‘yes’ to this question, please move on to question {{ content.get_question('organisationSize').number }}.
