--- a/frameworks/g-cloud-9/questions/declaration/appropriateTradeRegisters.yml
+++ b/frameworks/g-cloud-9/questions/declaration/appropriateTradeRegisters.yml
@@ -4,7 +4,7 @@ type: boolean
 hint: >
   Check that your organisation complies with <a href="http://www.legislation.gov.uk/uksi/2015/102/regulation/58/made" target="_blank" rel="noopener noreferrer">Schedule 5, Regulation 58(5) (link opens in a new tab)</a> of the Public Contracts Regulations 2015.
 validations:
-  - 
+  -
     name: answer_required
     message: >
-      You need to answer this question because you answered ‘no’ to [[establishedInTheUK]].
+      You need to answer this question because you answered ‘no’ to {{ content.get_question('establishedInTheUK').number }}.
