--- a/frameworks/g-cloud-9/questions/declaration/appropriateTradeRegistersNumber.yml
+++ b/frameworks/g-cloud-9/questions/declaration/appropriateTradeRegistersNumber.yml
@@ -1,7 +1,7 @@
 name: Appropriate trade registration number
-question: If you answered ‘yes’ to question [[appropriateTradeRegisters]], please provide details including your organisation’s registration number.
+question: If you answered ‘yes’ to question {{ content.get_question('appropriateTradeRegisters').number }}, please provide details including your organisation’s registration number.
 type: text
 validations:
-  - 
+  -
     name: answer_required
-    message: You need to answer this question because you answered ‘yes’ to [[appropriateTradeRegisters]].
+    message: You need to answer this question because you answered ‘yes’ to {{ content.get_question('appropriateTradeRegisters').number }}.
