--- a/frameworks/g-cloud-9/questions/declaration/mitigatingFactors2.yml
+++ b/frameworks/g-cloud-9/questions/declaration/mitigatingFactors2.yml
@@ -1,9 +1,9 @@
 name: Mitigating factors for tax returns
 question: >
-  If you responded ‘yes’ to either question [[unspentTaxConvictions]] or question [[GAAR]], please provide details of 
+  If you responded ‘yes’ to either question {{ content.get_question('unspentTaxConvictions').number }} or question {{ content.get_question('GAAR').number }}, please provide details of
   any mitigating factors that you think should be taken into consideration.
 type: textbox_large
 validations:
-  - 
+  -
     name: answer_required
-    message: You need to answer this question because you answered ‘yes’ to either [[unspentTaxConvictions]] or [[GAAR]].
+    message: You need to answer this question because you answered ‘yes’ to either {{ content.get_question('unspentTaxConvictions').number }} or {{ content.get_question('GAAR').number }}.
