Make features and benefits editable by suppliers

--- a/frameworks/g-cloud-9/manifests/edit_service.yml
+++ b/frameworks/g-cloud-9/manifests/edit_service.yml
@@ -17,8 +17,7 @@
 
 -
   name: Service features and benefits
-  editable: false
-  edit_questions: true
+  editable: true
   questions:
     - multiqServiceFeaturesAndBenefitsHostingAndSoftware
     - multiqServiceFeaturesAndBenefitsSupport
