Update login link to user-frontend
Login functionality is now in the user-frontend. Although the content
being updated here is for a past framework and so unused, it's possible
it'll be copied in the future. Updating to be on the safe side.

--- a/frameworks/digital-outcomes-and-specialists/messages/homepage-sidebar.yml
+++ b/frameworks/digital-outcomes-and-specialists/messages/homepage-sidebar.yml
@@ -37,7 +37,7 @@ open:
       - user research studios
       - user research participants
 
-    [Create an account](/suppliers/create) or [log in](/suppliers/login) to apply.
+    [Create an account](/suppliers/create) or [log in](/user/login) to apply.
 
     [Find out how to apply](https://www.gov.uk/guidance/digital-outcomes-and-specialists-suppliers-guide)
 pending:
