--- a/frameworks/g-cloud-9/messages/urls.yml
+++ b/frameworks/g-cloud-9/messages/urls.yml
@@ -3,3 +3,11 @@ framework_agreement_url: "https://www.gov.uk/government/publications/g-cloud-9-f
 framework_agreement_pdf_url: "https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/612999/g-cloud-9-framework-agreement.pdf"
 
 supplier_guide_url: "https://www.gov.uk/guidance/g-cloud-suppliers-guide#how-to-apply"
+
+call_off_contract_url: "https://www.gov.uk/government/publications/g-cloud-9-call-off-contract"
+
+customer_benefits_record_form_url: "http://ccs-agreements.cabinetoffice.gov.uk/sites/default/files/contracts/G-Cloud%20Customer%20Benefits%20Record_4.docx"
+
+customer_benefits_record_form_email: "gcloud-benefits@crowncommercial.gov.uk"
+
+buyers_guide_compare_services_url: "https://www.gov.uk/guidance/g-cloud-buyers-guide#compare-services"
