--- a/frameworks/g-cloud-8/messages/become-a-supplier.yml
+++ b/frameworks/g-cloud-8/messages/become-a-supplier.yml
@@ -1,35 +1,35 @@
 coming: |
-  ‘G-Cloud’ is opening for applications.
-
-  You will be able to apply to sell:
-
-  <ul class="list-bullet">
-    <li>cloud hosting</li>
-    <li>software</li>
-    <li>technical support</li>
-  </ul>
+  <div class="explanation-list">
+    ‘G-Cloud’ is opening for applications.<br />
+    You will be able to apply to sell:
+    <ul class="list-bullet">
+      <li>cloud hosting</li>
+      <li>software</li>
+      <li>technical support</li>
+    </ul>
+  </div>
 
 open: |
-  ‘G-Cloud’ is open for applications.
-
-  You can apply to sell:
-
-  <ul class="list-bullet">
-    <li>cloud hosting</li>
-    <li>software</li>
-    <li>technical support</li>
-  </ul>
+ <div class="explanation-list">
+    ‘G-Cloud’ is open for applications.<br />
+    You can apply to sell:
+    <ul class="list-bullet">
+      <li>cloud hosting</li>
+      <li>software</li>
+      <li>technical support</li>
+    </ul>
+  </div>
 
 pending: &can_not_apply |
-  ‘G-Cloud’ is closed for applications.
-
-  You will be able to apply to sell:
-
-  <ul class="list-bullet">
-    <li>cloud hosting</li>
-    <li>software</li>
-    <li>technical support</li>
-  </ul>
+  <div class="explanation-list">
+    ‘G-Cloud’ is closed for applications.<br />
+    You will be able to apply to sell:
+    <ul class="list-bullet">
+      <li>cloud hosting</li>
+      <li>software</li>
+      <li>technical support</li>
+    </ul>
+  </div>
 
 standstill: *can_not_apply
 
