--- a/frameworks/digital-outcomes-and-specialists/messages/become-a-supplier.yml
+++ b/frameworks/digital-outcomes-and-specialists/messages/become-a-supplier.yml
@@ -1,6 +1,6 @@
 coming: |
   <div class="explanation-list">
-    ‘Digital Outcomes and Specialists’ is opening for applications.<br />
+    Digital Outcomes and Specialists is opening for applications.<br />
     You will be able to apply to sell:
     <ul class="list-bullet">
       <li>digital outcomes, for example a team to build a service</li>
@@ -12,7 +12,7 @@ coming: |
 
 open: |
   <div class="explanation-list">
-    ‘Digital Outcomes and Specialists’ is open for applications.<br />
+    Digital Outcomes and Specialists is open for applications.<br />
     You can apply to sell:
     <ul class="list-bullet">
       <li>digital outcomes, for example a team to build a service</li>
@@ -24,7 +24,7 @@ open: |
 
 pending: &can_not_apply |
   <div class="explanation-list">
-    ‘Digital Outcomes and Specialists’ is closed for applications.<br />
+    Digital Outcomes and Specialists is closed for applications.<br />
     You will be able to apply to sell:
     <ul class="list-bullet">
       <li>digital outcomes, for example a team to build a service</li>
