--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/awardedContractValue.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/awardedContractValue.yml
@@ -2,6 +2,7 @@ name: What's the value?
 question: What's the value?
 hint: 'eg 9900.95 for 9900 pounds and 95 pence'
 type: pricing
+decimal_place_restriction: true
 fields:
   price: awardedContractValue
 
@@ -10,6 +11,6 @@ validations:
     message: 'You need to answer this question.'
   - name: not_money_format
     field: awardedContractValue
-    message: "Value must be in numbers and decimal points only, for example 9900.95 for 9900 pounds and 95 pence."
+    message: "Enter your value in pounds and pence using numbers and decimals only, for example 9900.05 for 9900 pounds and 5 pence."
 
 empty_message: Set value
