Allow suppliers to upload new service definition docs for G9 services

--- a/frameworks/g-cloud-9/manifests/edit_service.yml
+++ b/frameworks/g-cloud-9/manifests/edit_service.yml
@@ -4,11 +4,13 @@
   questions:
     - id
     - lotName
+
 -
   name: Service name
   editable: true
   questions:
     - serviceName
+
 -
   name: About your service
   editable: true
@@ -21,3 +23,8 @@
   questions:
     - multiqServiceFeaturesAndBenefitsHostingAndSoftware
     - multiqServiceFeaturesAndBenefitsSupport
+
+- name: Documents
+  editable: true
+  questions:
+    - serviceDefinitionDocumentURL
