Add empty message to service definition document question
Service definition was optional for G-Cloud 9, and now we are allowing
suppliers to upload service definition documents for live services
we need something to show in the summary table when no document has yet
been uploaded.

Not adding this for any other questions at the moment, as there are no
plans for any other optional fields to become editable by suppliers (all
other document changes will still need to go through CCS/admin for
approval).

--- a/frameworks/g-cloud-9/questions/services/serviceDefinitionDocumentURL.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceDefinitionDocumentURL.yml
@@ -24,3 +24,5 @@ validations:
     message: Your document exceeds the 5MB limit. Please reduce file size.
   - name: file_can_be_saved
     message: Your document failed to upload. Please try again.
+
+empty_message: You haven’t added a service definition document
