Remove the declaration questions that we're removing
This information will come from the supplier account in future, and not be asked separately for the declaration.

--- a/frameworks/g-cloud-10/questions/declaration/appropriateTradeRegisters.yml
+++ b/frameworks/g-cloud-10/questions/declaration/appropriateTradeRegisters.yml
@@ -7,4 +7,4 @@ validations:
   - 
     name: answer_required
     message: >
-      You need to answer this question because you answered ‘no’ to [[establishedInTheUK]].
+      You need to answer this question because your business was not established in the UK.
