--- a/frameworks/digital-outcomes-and-specialists-3/questions/declaration/appropriateTradeRegisters.yml
+++ b/frameworks/digital-outcomes-and-specialists-3/questions/declaration/appropriateTradeRegisters.yml
@@ -5,4 +5,4 @@ hint: >
 validations:
   - name: answer_required
     message: >
-      You need to answer this question because you answered ‘no’ to [[establishedInTheUK]].
+      You need to answer this question because your business was not established in the UK.
