--- a/frameworks/digital-outcomes-and-specialists-3/questions/declaration/licenceOrMemberRequired.yml
+++ b/frameworks/digital-outcomes-and-specialists-3/questions/declaration/licenceOrMemberRequired.yml
@@ -7,4 +7,4 @@ options:
   - label: none of the above
 validations:
   - name: answer_required
-    message: You need to answer this question because you answered ‘no’ to [[establishedInTheUK]].
+    message: You need to answer this question because your business was not established in the UK.
