--- a/frameworks/g-cloud-10/questions/declaration/licenceOrMemberRequired.yml
+++ b/frameworks/g-cloud-10/questions/declaration/licenceOrMemberRequired.yml
@@ -9,4 +9,4 @@ options:
 validations:
   - 
     name: answer_required
-    message: You need to answer this question because you answered ‘no’ to [[establishedInTheUK]].
+    message: You need to answer this question because your business was not established in the UK.
